# etl_evm

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-push.yml  ci.yml
data/: ERC20.json  GetUniswapV2PairsBatchRequest.sol  UniV2FactoryPair1.json  UniV2FactoryPair2.json  UniswapV2PairList.json  block.csv  etl.toml  etl_example.toml  event.csv  event_burn.csv  event_create.csv  event_mint.csv  event_swap.csv  influx.sh  pair.csv  pair_event.csv  subscribed_swap_events.csv  test.csv  univ2_burn_event.csv  univ2_create_event.csv  univ2_mint_event.csv  univ2_swap_event.csv
src/: extract.rs  extract_block.rs  extract_event.rs  extract_wss.rs  init.rs  load.rs  load_block.rs  load_event.rs  load_tsdb.rs  main.rs  tempCodeRunnerFile  to_mq.rs  transform.rs  transform_block.rs  transform_event.rs  write_service.rs
src/extract/: rpc.rs
