[package]
name = "etl_evm"
version = "0.1.0"
edition = "2024"

[dependencies]
# 错误处理
eyre = "0.6"
# 通用序列化
serde = { version = "1.0", features = ["derive"] }
# 日志处理
log = "0.4"
env_logger = "0.10"
# 配置处理
config = "0.13"
# 异步处理
tokio = { version = "1.45", features = ["full"] }
# 以太坊相关库
alloy = { version = "1.0.3", features = ["full"] }