[package]
name = "etl_evm"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
config = "0.13"
tokio = { version = "1.45", features = ["full"] }
alloy = { version = "1.0.13", features = ["full"] }
chrono = "0.4.41"
csv = "1.3.1"
reqwest = "0.12.22"
